fixed media spacing

--- a/main.scss
+++ b/main.scss
@@ -85,7 +85,7 @@ header {
         list-style-type: none;
 
         a {
-          transform: translateX(-46%);
+          transform: translateX(-40%);
           color: $gray;
           font-weight: 300;
           padding-left: 10px;
@@ -112,6 +112,7 @@ header {
     .primary_btn {
       font: inherit;
       color: inherit;
+      text-decoration: none;
       background-color: transparent;
       border-radius: 3px;
       border: solid 1px $white;
@@ -170,7 +171,7 @@ main {
         font-weight: 200;
         line-height: 1.5;
         letter-spacing: .1rem;
-        margin-top: 30px;
+        margin: 30px 0 50px 0;
       }
 
       &-button {
@@ -178,8 +179,8 @@ main {
         color: inherit;
         font-weight: 100;
         text-transform: uppercase;
+        text-decoration: none;
         background-color: $primary-green-darkest;
-        margin-top: 30px;
         border: none;
         border-radius: 3px;
         padding: 1rem 3rem;
@@ -292,7 +293,7 @@ main {
         left: -1rem;
         line-height: 1;
         font-size: 15rem;
-        color: rgba($gray,0.5);
+        color: rgba($gray,0.2);
         font-family: sans-serif;
         z-index: -1;
       }
@@ -305,18 +306,24 @@ main {
       align-items: center;
       flex-direction: column;
       color: white;
+      line-height: 5rem;
       background-color: $primary-green;
 
-      .media-icons a {
-        fill: $white;
+      .media-icons  {
+        padding-top: 3rem;
 
-        .linkedin-logo:hover {
-          fill: navy;
+        a {
+          fill: $white;
+
+          .linkedin-logo:hover {
+            fill: navy;
+          }
+
+          .github-logo:hover {
+            fill: black;
+          }
         }
 
-        .github-logo:hover {
-          fill: black;
-        }
       }
     }
 }
