--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
         text-decoration: none;
         list-style-type: none; }
         header .nav-container .nav-list .dropdown-content a {
-          transform: translateX(-46%);
+          transform: translateX(-40%);
           color: #a4a4a4;
           font-weight: 300;
           padding-left: 10px;
@@ -68,6 +68,7 @@ header {
     header .nav-container .primary_btn {
       font: inherit;
       color: inherit;
+      text-decoration: none;
       background-color: transparent;
       border-radius: 3px;
       border: solid 1px white;
@@ -113,14 +114,14 @@ main {
         font-weight: 200;
         line-height: 1.5;
         letter-spacing: .1rem;
-        margin-top: 30px; }
+        margin: 30px 0 50px 0; }
       main .main-header__content-button {
         font-size: 1rem;
         color: inherit;
         font-weight: 100;
         text-transform: uppercase;
+        text-decoration: none;
         background-color: #006661;
-        margin-top: 30px;
         border: none;
         border-radius: 3px;
         padding: 1rem 3rem;
@@ -206,7 +207,7 @@ main {
         left: -1rem;
         line-height: 1;
         font-size: 15rem;
-        color: rgba(164, 164, 164, 0.5);
+        color: rgba(164, 164, 164, 0.2);
         font-family: sans-serif;
         z-index: -1; }
   main .main-last {
@@ -215,10 +216,13 @@ main {
     align-items: center;
     flex-direction: column;
     color: white;
+    line-height: 5rem;
     background-color: #00b2a9; }
-    main .main-last .media-icons a {
-      fill: white; }
-      main .main-last .media-icons a .linkedin-logo:hover {
-        fill: navy; }
-      main .main-last .media-icons a .github-logo:hover {
-        fill: black; }
+    main .main-last .media-icons {
+      padding-top: 3rem; }
+      main .main-last .media-icons a {
+        fill: white; }
+        main .main-last .media-icons a .linkedin-logo:hover {
+          fill: navy; }
+        main .main-last .media-icons a .github-logo:hover {
+          fill: black; }
